fix: some bad display in dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,10 @@ main {
     font-size: 18px;
 }
 
+.chip svg.chip-icon path {
+    fill: var(--md-sys-color-on-surface-variant);
+}
+
 .chip .chip-label {
     color: var(--md-sys-color-on-surface-variant);
 }
